overflow problem solved

--- a/src/components/HexGenerator/HexGenerator.scss
+++ b/src/components/HexGenerator/HexGenerator.scss
@@ -1,11 +1,12 @@
 .container {
-  padding: 20px;
+  padding-top: 20px;
   width: 100%;
   min-height: 100vh;
   height: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  overflow: hidden;
 }
 .flex {
   display: flex;
@@ -81,6 +82,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
   }
   .flex-col {
     width: 100%;
